--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="RedFlags">
     <title>RedFlags</title>
-    
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="icon" href="img/Favicon.png" type="image/x-icon">
 </head>
 
 <header id="header">
     <div id="HeaderButton">
-        <button>Leave Game</button>
+        <button id="leaveGame">Leave Game</button>
     </div>
 </header>
 
 <body>
-
     <div class="parent">
-        <div class="div1"> 
-            <div id="WitteKaart1">
+        <div class="div1">
+            <div id="w1" class="WitteKaart">
                 <a>Default Text</a>
             </div>
-            <div id="WitteKaart2">
+            <div id="w2" class="WitteKaart">
                 <a>Default Text</a>
             </div>
-            <div id="WitteKaart3">
+            <div id="w3" class="WitteKaart">
                 <a>Default Text</a>
             </div>
-            <div id="WitteKaart4">
+            <div id="w4" class="WitteKaart">
                 <a>Default Text</a>
             </div>
-            <div id="WitteKaart5">
+            <div id="R1" class="RodeKaart">
                 <a>Default Text</a>
             </div>
-            <div id="WitteKaart6">
+            <div id="R2" class="RodeKaart">
                 <a>Default Text</a>
             </div>
-            <div id="RodeKaart1">
+            <div id="R3" class="RodeKaart">
                 <a>Default Text</a>
             </div>
-            <div id="RodeKaart2">
-                <a>Default Text</a>
-            </div>  
-            <div id="RodeKaart3">
-                <a>Default Text</a>
-            </div>    
+            <button id="whiteplaybutton">play white cards</button>
+            <button id="redplaybutton">play red card</button>
         </div>
 
-        <div class="div2"> 
+        <div class="div2">
             <div id="ScoreBoard">
                 <table rules="rows" id="ScoreBoardTable">
                     <tr>
@@ -76,7 +72,7 @@
             </div>
         </div>
 
-        <div class="div3"> 
+        <div class="div3">
             <div id="ChatInput">
                 <input type="text" id="ChatInputField">
                 <button>Chat</button>
@@ -84,7 +80,11 @@
         </div>
     </div>
 
+    <!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
+    <!-- Custom js  -->
+    <script src="js/main.js"></script>
 
 </body>
 </html>
